# nih-plug-webview

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  rustfmt.toml  webview.d.ts
examples/: simple.html  simple.js  simple.rs  simple.ts
src/: editor.rs  handler.rs  lib.js  lib.rs  raw_window_handle.rs  reparent.rs  safe_cell.rs  script.js  util.rs  window_handle.rs
src-ts/: index.ts
wry/: CHANGELOG.md  Cargo.toml  README.md
wry/.github/workflows/: build.yml  covector-version-or-publish.yml
wry/examples/: window_border.rs
wry/src/: error.rs  lib.rs
wry/src/android/: main_pipe.rs  mod.rs
wry/src/webkitgtk/: mod.rs
wry/src/webview2/: mod.rs
wry/src/wkwebview/: mod.rs
wry/src/wkwebview/class/: url_scheme_handler.rs  wry_web_view.rs  wry_web_view_parent.rs
