[package]
name = "nih_plug_webview"
version = "0.1.0"
edition = "2021"
authors = [
    "Jakub Idzik <iglak.me@gmail.com>",
    "Max Huttunen <max.huttunen@gmail.com>",
]
license = "ISC"
description = "An adapter to build editor GUIs with nih-plug using web-based tools"

[dependencies]

base64 = "0.22.1"
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "cd4df61" }
crossbeam = "0.8.4"
keyboard-types = "0.6.2"
mime_guess = "2.0.4"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "40269e1", default-features = false }
raw-window-handle = "0.6.2"
raw-window-handle-0-5 = { package = "raw-window-handle", version = "0.5.2" }
serde = ">=1.0"
wry = { path = "../wry" }
log = "0.4"
objc2 = "0.6.0"
objc2-app-kit = "0.3.0"

[dev-dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "40269e1", features = [
    "standalone",
] }
tempfile = "3.14.0"
