[package]
name = "nih_plug_webview"
version = "0.2.0"
edition = "2021"
authors = [
    "iglak <iglak.me@gmail.com>",
    "Max Huttunen <max.huttunen@gmail.com>",
]
license = "ISC"
description = "A webview adapter for creating editor GUIs with nih-plug"

[dependencies]
crossbeam = "0.8.4"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "17ba595e748927290eb72974bc528f11d1d20e89", default-features = false }
raw-window-handle = "0.6.2"
serde = ">=1.0"
wry = { git = "https://github.com/toiglak/wry.git", branch = "v0.50.5-fork", features = [
    "tracing",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60", features = ["Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
objc2-app-kit = "0.3.1"

[dev-dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "17ba595e748927290eb72974bc528f11d1d20e89", features = [
    "standalone",
] }
tempfile = "3.14.0"
